tests/tc/pos/upcast-01.js

/*@ simple :: (x: number) => number + boolean */
function simple(x) {
  return 1;
}


